test/spec_vectors/memory64/ok/module_5.wat
(module (memory i64 0 281474976710656))