test/spec_vectors/memory64/fail/module_22.wat
(module (memory (import "M" "m") i64 0 281474976710657))